# neuralbay-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  fly.toml  render.yaml
.github/workflows/: deploy.yml
backend/: VERSION  go.mod  go.sum  main.go
backend/common/: constants.go  custom-event.go  embed-file-system.go  geo_resolver.go
backend/constant/: channel.go
backend/controller/: dashboard_sse.go  payment_regional.go  relay.go  user.go
backend/i18n/: i18n.go
backend/i18n/locales/: ar.yaml
backend/middleware/: geo_route.go  metrics.go  metrics_test.go
backend/relay/: relay_adaptor.go
backend/router/: api-router.go  web-router.go
backend/service/: channel_affinity_usage_cache_test.go  token_test.go
backend/setting/system_setting/: system_setting_old.go
deploy/docker/: Dockerfile  nginx.conf
deploy/grafana/: dashboard.json
deploy/k8s/: deployment.yaml  kustomization.yaml
deploy/prometheus/: prometheus.yml
deploy/terraform/bahrain/: main.tf
deploy/terraform/singapore/: main.tf
docs/: api.md  contributing.md  deployment.md  market_entry_analysis.md  openapi.yaml  pricing_strategy.md
scripts/: setup.sh
sdk/go/: go.mod  neuralbay.go
sdk/javascript/: .gitignore  README.md  neuralbay.ts  package-lock.json  package.json  tsconfig.json
sdk/python/: .gitignore  README.md  __init__.py  neuralbay.py  pyproject.toml  setup.py
sdk/python/neuralbay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: .eslintrc.cjs  Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json
(+33 files in other folders)
